--- a/scientificdata_one4.ipynb
+++ b/scientificdata_one4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFxsP7cGlYvArpM6IDiha3",
+      "authorship_tag": "ABX9TyO3o9XXcyVDmMoRdxJZki4f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/feat%2Fnew-processing-file/scientificdata_one4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ryu622/gnn-counterattack-xai-v2/blob/fix%2Ffile-clean/scientificdata_one4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -405,12 +405,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"-> 成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "v6Dnzw2x8kND"
@@ -431,12 +431,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -465,10 +465,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -609,12 +609,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "K4k9V1ukr0rp"
@@ -635,12 +635,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -669,10 +669,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -813,12 +813,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "CFGDSPV2vSwn"
@@ -839,12 +839,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -873,10 +873,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1017,12 +1017,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "FHS4m6US3ccv"
@@ -1043,12 +1043,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1077,10 +1077,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1221,12 +1221,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "j-qeAbgU5Kwr"
@@ -1247,12 +1247,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1281,10 +1281,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1425,12 +1425,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "jFaosvvG61Tz"
@@ -1451,12 +1451,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1485,10 +1485,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1629,12 +1629,12 @@
         "    if pyg_data:\n",
         "        save_path = os.path.join(save_dir, f\"match_{TARGET_MATCH_IDX + 1}.pt\")\n",
         "        torch.save(pyg_data, save_path)\n",
-        "        print(f\"-> ✅ 成功: {len(pyg_data)} シーンを保存しました。\")\n",
+        "        print(f\"->  成功: {len(pyg_data)} シーンを保存しました。\")\n",
         "    else:\n",
-        "        print(\"-> ⚠ 成功シーンが0件でした。\")\n",
+        "        print(\"->  成功シーンが0件でした。\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"-> ❌ エラー: {e}\")"
+        "    print(f\"->  エラー: {e}\")"
       ],
       "metadata": {
         "id": "ka-O1jtv9MIZ"
@@ -1655,12 +1655,12 @@
         "        # weights_only=False でセキュリティロックを回避\n",
         "        data = torch.load(file_path, weights_only=False)\n",
         "    except Exception as e:\n",
-        "        print(f\"❌ ファイルの読み込みに失敗しました: {e}\")\n",
+        "        print(f\" ファイルの読み込みに失敗しました: {e}\")\n",
         "        return\n",
         "\n",
         "    success_scenes = [d for d in data if d.y.item() == 1]\n",
         "    if not success_scenes:\n",
-        "        print(\"⚠ 成功シーン(y=1)がデータ内に存在しません。\")\n",
+        "        print(\" 成功シーン(y=1)がデータ内に存在しません。\")\n",
         "        return\n",
         "\n",
         "    ball_right_count = 0\n",
@@ -1689,10 +1689,10 @@
         "\n",
         "    print(f\"検証シーン数 (y=1): {len(success_scenes)}\")\n",
         "    print(f\"  [1] ボールの右向き推進率: {ball_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 物理強制成功' if ball_rate > 80 else '❌ 物理矛盾（Flipが効いていない）'}\")\n",
+        "    print(f\"      -> {' 物理強制成功' if ball_rate > 80 else ' 物理矛盾（Flipが効いていない）'}\")\n",
         "\n",
         "    print(f\"  [2] 全選手の右向き率:     {player_rate:.1f}%\")\n",
-        "    print(f\"      -> {'✅ 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else '⚠ 異常値 (再確認が必要)'}\")\n",
+        "    print(f\"      -> {' 合格 (攻撃側と守備側が混在)' if 65 < player_rate < 90 else ' 異常値 (再確認が必要)'}\")\n",
         "\n",
         "# --- 実行 ---\n",
         "# いま保存した match_6.pt のパスを指定してください\n",
@@ -1833,7 +1833,7 @@
         "}\n",
         "\n",
         "torch.save(save_obj, final_output_path)\n",
-        "print(f\"\\n✅ 保存完了: {final_output_path}\")"
+        "print(f\"\\n 保存完了: {final_output_path}\")"
       ],
       "metadata": {
         "id": "RuyT715utreo"
